--- a/subgraph/axolittles/subgraph.yaml
+++ b/subgraph/axolittles/subgraph.yaml
@@ -2,27 +2,35 @@ specVersion: 0.0.2
 schema:
   file: ./schema.graphql
 dataSources:
-  - kind: ethereum/contract
-    name: axolittles
+  - kind: ethereum
+    name: Axolittles
     network: mainnet
     source:
-      address: "0x08DEEfCcC7f0C63b22fBE5D6C4bef795041551A5"
-      abi: axolittles
-      startBlock: 0
+      address: "0xf36446105fF682999a442b003f2224BcB3D82067"
+      abi: Axolittles
+      startBlock: 13171333
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.4
+      apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
-        - AxoHolder
-        - Tran
-        - AxoMint
+        - Approval
+        - ApprovalForAll
+        - Mint
+        - OwnershipTransferred
+        - Transfer
       abis:
-        - name: axolittles
-          file: ./abis/axolittles.json
+        - name: Axolittles
+          file: ./abis/Axolittles.json
       eventHandlers:
+        - event: Approval(indexed address,indexed address,indexed uint256)
+          handler: handleApproval
+        - event: ApprovalForAll(indexed address,indexed address,bool)
+          handler: handleApprovalForAll
         - event: Mint(indexed address,indexed uint256)
-          handler: handleMinting
+          handler: handleMint
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
         - event: Transfer(indexed address,indexed address,indexed uint256)
           handler: handleTransfer
       file: ./src/mapping.ts
